# differ

./: README.md  pyproject.toml
differ/: __init__.py  main.py
